--- a/app/static/templates/index.html
+++ b/app/static/templates/index.html
@@ -14,6 +14,7 @@
     <script charset="utf-8" src="static/lib/vue/dist/vue.js"></script>
 
     <!-- App -->
-    <script charset="utf-8" src="static/src/index.js"></script>
+    <script charset="utf-8" src="static/dist/app.js"></script>
+
 </body>
 </html>
