iniciando vue.js

--- a/app/static/templates/index.html
+++ b/app/static/templates/index.html
@@ -7,9 +7,12 @@
     <link rel="shortcut icon" type="image/png" href="static/resources/img/favicon.png"/>
 </head>
 <body>
-    <div id="app">
-        <p>{{ message }}</p>
+    
+    <div id="container">
+        <router-view></router-view>
+        teste
     </div>
+
     <!-- Dependencies -->
     <script charset="utf-8" src="static/lib/vue/dist/vue.js"></script>
 
