--- a/web/src/views/issues/issues.html
+++ b/web/src/views/issues/issues.html
@@ -9,7 +9,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="value in data">
+        <tr v-for="value in issues">
           <td>{{value.title}}</td>
           <td>{{value.description}}</td>
         </tr>
@@ -38,8 +38,8 @@
   </div>
 
   <div class="fixed-action-btn">
-    <a class="btn-floating btn-large green">
-      <i class="large material-icons">mode_edit</i>
+    <a class="btn-floating waves-effect waves-light btn-large green">
+      <i class="large material-icons">add</i>
     </a>
   </div>
 
