--- a/web/src/components/modal/gzmodal.html
+++ b/web/src/components/modal/gzmodal.html
@@ -1,6 +1,6 @@
 <div id="gzmodal" class="modal">
   <div class="modal-content">
-    <h4><slot name="title"></slot></h4>
+    <h4>{{title}}</h4>
     <p><slot name="body"></slot></p>
   </div>
   <div class="modal-footer">
