--- a/web/src/views/issues/issues.html
+++ b/web/src/views/issues/issues.html
@@ -45,20 +45,40 @@
     </a>
   </div>
 
-  <gzmodal>
-     <span slot="title">Issues</span> 
+  <gzmodal title="New issue">
      <span slot="body">
 
-        Body
+       <div class="container">
+          <div class="row">
+            <form class="col s12">
+              
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="title" name="title" v-model="issue.title" type="text" class="validate">
+                  <label for="title" class="active">Title</label>
+                </div>
+              </div>
+              
+              <div class="row">
+                <div class="input-field col s12">
+                  <textarea id="description" name="description" v-model="issue.description" class="materialize-textarea"></textarea>
+                  <label for="description">Description</label>
+                </div>
+              </div>
+
+              <button v-on:click.prevent="saveIssue()" type="button" class="modal-action modal-close waves-effect waves-green btn-flat">
+                Save
+              </button>
+              <button type="button" class="modal-action modal-close waves-effect waves-green btn-flat">
+                Close
+              </button>
+            
+            </form>
+          </div>
+       </div>
 
      </span>
      <span slot="footer">
-      <a class="modal-action modal-close waves-effect waves-green btn-flat">
-        Save
-      </a>
-      <a class="modal-action modal-close waves-effect waves-green btn-flat">
-        Close
-      </a>
      </span>
   </gzmodal>
 
